app/styles/Abacus.css
/******Progress Bar and Save Button******/
#ProgressSaveBar {
    height: 30px;
}

#ProgressSaveBar > .progress {
    height: inherit;
    width: 90%;
    border-radius: 0px;
    margin: 0px;
    display:inline-block;
}

#ProgressSaveBar > .btn {
    width: 10%;
    max-height: 30px;
    height: 30px;
    padding: 1px;
    float: right;
    font-size: 14px;
}

#ProgressSec  #pSec {
  margin-left: -18px;
  position: relative;
  left: -5px;

}

.btn .btn-primary{
  padding: 5px;
  margin:20px;
}

#SaveButton {
    width:10%;
    height: 3%;
    background-color:#000;
    border-color: #000;
    border-radius: 0px;
    text-align: center;
    padding-bottom:2%;
}

/******Main Picture******/
.mainpic img {
  /* height: 600px;*/
  margin-top: 3%;
  margin-left: 5%;
}


/******Sidebar******/
.nav-tabs.nav-justified > li.active,
.nav-tabs.nav-justified > li {
  margin-right: 10px;
  line-height: 1.42857143;
  /*border: 1px solid transparent;*/
  border-radius: 20px 20px 0px 0px;
  font-size: 20px;
}


.nav-tabs.nav-justified > li > a,
.nav-tabs.nav-justified > li > a:hover,
.nav-tabs.nav-justified > li > a:focus {
  color: #FFFFFF;
  cursor: default;
  background-color: #bcbec0;
  border: none;
  border-radius: 20px 20px 0px 0px;
  border-bottom-color: transparent;
}



.nav-tabs.nav-justified > li.active > a,
.nav-tabs.nav-justified > li.active > a:hover,
.nav-tabs.nav-justified > li.active > a:focus {
  color: #000000;
  cursor: default;
  background-color: #f1f2f2;
  border: none;
  border-radius: 20px 20px 0px 0px;
  border-bottom-color: transparent;
  -webkit-box-shadow: 0px -2px 3px 2px #999999;
  -moz-box-shadow:    0px -2px 3px 2px #999999;
  box-shadow:         0px -2px 3px 2px #999999;
  z-index: 50; /* pull to the front so shadow shows over other tabs */
}


.sideBarWrapper {
  display: inline-block;
  clear: right;
  float: right;
  width: 400px;
  margin-right: 20px;
}


 .sideBar .well {
  padding: 5px 10px;

}

.sideBar{
  position: relative;
  background-color: #f1f2f2;
  border: 1px solid #A7A9Ac ;
  border-radius: 0px;
}


.sideBar h3 img.leftButton {
  float: left;
  margin-top: -5px;
  width: 30px;
  height: 30px;
}

.sideBar h3 img.rightButton {
  float: right;
  margin-top: -5px;
  width: 30px;
  height: 30px;
}

.sidebar h3 img:hover {
    cursor: pointer;
}

.sideBar .sideBarTable {
    overflow-y: auto;
    max-height: 500px;
    height: auto;
}

.sideBar .sideBarItemLeft {
  position: relative;
  width: 120px;
}

.sideBar .sideBarItemLeft .colorOptionsIndicator {
  position: absolute;
  top: 10px;
  left: 10px;
  border: none;
}

.sideBar .sideBarItemLeft .colorOptionsIndicator:hover {
    cursor: pointer;
}

.sideBarItem .sideBarItemLeft img {
    border-right: 1px solid #A7A9Ac;
    padding-right: 10px;
}

.sideBarItem .sideBarItem-Button {
    border: 1px solid #A7A9Ac;
    display:inline-block;
    width: 50%;
    margin-right:-5px;
}

.sideBarItem .sideBarItem-Button:hover {
    border: 1px solid #60C2B1;
    background-color: #60C2B1;
    color: #FFFFFF;
    cursor: pointer;
}

/****** Color Panel ******/
.sideBar .colorPanelIn {
  left: -140px;
  opacity: 1;
  z-index: 200;
}
.sideBar .colorPanelOut {
  left: -160px;
  opacity: 0;
  z-index: 0;
}

.sideBar .colorPanel {
  position: absolute;
  top: 55px;
  width: 140px;
  height: auto;
  max-height: 300px;
  overflow-y: auto;
  background-color: #D6D8D8;
  transition: 1s;
}

.sideBar .colorPanel .colorPanelItem {
  width: 90px;
  height: 90px;
  margin: auto;
  margin-top: 15px;
  margin-bottom: 15px;
}


.sideBar .colorPanelArrowIn {
  opacity: 1;
}

.sideBar .colorPanelArrowOut {
  opacity: 0;
}

.sideBar .colorPanelArrow {
  position: absolute;
  top: 10px;
  left: 0px;
  width: 0;
  height: 0;
  border-top: 15px solid transparent;
  border-bottom: 15px solid transparent;

  border-left: 15px solid #D6D8D8;
  transition: 1s;
}

/******Detail Panel******/
.sideBar .detailPanelIn {
  left: -250px;
  opacity: 1;
  z-index: 200;
}
.sideBar .detailPanelOut {
  left: -270px;
  opacity: 0;
  z-index: 0;
}

.sideBar .detailPanel {
  position: absolute;
  top: 55px;
  width: 250px;
  height: auto;
  max-height: 400px;
  overflow-y: auto;
  overflow-x: hidden;
  background-color: #D6D8D8;
  transition: 1s;
}



#offClickArea {
  position: fixed;
  z-index: 100;
  background-color: rgba(0, 0, 0, 0);
  width: 100%;
  height: 100%;
  display: none;
}

